unpackaged/main/default/objects/Engagement_Activity__c/Engagement_Activity__c.object-meta.xml
<CustomObject>
    <description>This will be used for each Engagement Activity as part of the Consulting Services Record Type (Return Business)</description>
    <label>Engagement Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>