unpackaged/main/default/objects/Engagement_Activity__c/fields/Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Activity_Description__c</fullName>
    <description>Description of consulting activity</description>
    <label>Activity Description</label>
    <type>TextArea</type>
</CustomField>