unpackaged/main/default/objects/Engagement_Activity__c/fields/Activity_Total__c.field-meta.xml
<CustomField>
    <fullName>Activity_Total__c</fullName>
    <formula>Number_of_Days__c *  Daily_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>