unpackaged/main/default/objects/Engagement_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>Use to define whether providing a service or travel expense</description>
    <label>Activity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Services</fullName>
                <default>true</default>
                <label>Services</label>
            </value>
            <value>
                <fullName>Travel_Time</fullName>
                <label>Travel Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>