unpackaged/main/default/objects/Engagement_Activity__c/fields/Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate__c</fullName>
    <description>Daily rate charge for activity</description>
    <label>Daily Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>