unpackaged/main/default/objects/Engagement_Activity__c/fields/Im_the_Resource__c.field-meta.xml
<CustomField>
    <fullName>Im_the_Resource__c</fullName>
    <formula>LEN(Resource__r.Id) &gt; 0 &amp;&amp; Resource__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Im the Resource</label>
    <type>Checkbox</type>
</CustomField>