unpackaged/main/default/objects/Engagement_Activity__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <description>Total days of activity</description>
    <label>Number of Days</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>