unpackaged/main/default/objects/Engagement_Activity__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Resource who will complete the activity</description>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engagement_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>