unpackaged/main/default/objects/Engagement_Activity__c/fields/Skillset_Required__c.field-meta.xml
<CustomField>
    <fullName>Skillset_Required__c</fullName>
    <label>Skillset Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Consulting_Services_Products</valueSetName>
    </valueSet>
</CustomField>