unpackaged/main/default/objects/Engagement_Activity__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start of Engagement</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>