unpackaged/main/default/objects/Engagement_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Number_of_Days__c</columns>
    <columns>Location__c</columns>
    <columns>Resource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>