unpackaged/main/default/objects/Engagement_Activity__c/listViews/My_Activities_All.listView-meta.xml
<ListView>
    <fullName>My_Activities_All</fullName>
    <columns>Activity_Type__c</columns>
    <columns>NAME</columns>
    <columns>Activity_Description__c</columns>
    <columns>Case__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Number_of_Days__c</columns>
    <columns>Location__c</columns>
    <columns>Skillset_Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Im_the_Resource__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Activities - All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>